--- a/paraphase/data/cyp21/cyp21_config.yaml
+++ b/paraphase/data/cyp21/cyp21_config.yaml
@@ -21,6 +21,8 @@ coordinates:
     nchr_length: 170805979
     extract_region1: "chr6:31980000-32048000"
     extract_region2: ""
+
+    clip_3p_positions: [32046127]
     
     deletion1_size: 6367
     deletion2_size: 120
