--- a/paraphase/data/pms2/pms2_config.yaml
+++ b/paraphase/data/pms2/pms2_config.yaml
@@ -5,6 +5,7 @@ tools:
   singularity: /usr/bin/singularity
 
 gene: pms2
+check_nm: True
 
 # data files
 data:
@@ -15,7 +16,7 @@ data:
 coordinates:
   hg38:
     nchr: "chr7"
-    nchr_old: "chr7_5970000_5989500"
+    nchr_old: "chr7_5967000_5992500"
     nchr_length: 159345973
     extract_region1: "chr7:5970000-5989062"
     extract_region2: "chr7:6735630-6754792"
@@ -25,7 +26,7 @@ coordinates:
     left_boundary: 5970925
     right_boundary: 5986000
 
-    clip_3p_positions: [5989126]
+    clip_3p_positions: [5989126, 5989052]
 
-    noisy_region: [[5980880, 5980980], [5979663, 5979669]]
+    noisy_region: [[5980880, 5980980], [5979663, 5979669], [5975950, 5976080]]
 
