--- a/paraphase/data/19/config.yaml
+++ b/paraphase/data/19/config.yaml
@@ -113,6 +113,7 @@ ikbkg:
   del1_5p_pos2: 153797071
   noisy_region: [[153795215, 153795402], [153784084, 153784091], [153793571, 153793618]]
   is_reverse: True
+  keep_truncated: True
 ncf1:
   genes: NCF1
   check_nm: 0.1
